# rag_project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml  test_results.txt
scripts/: ingest.py  query.py
src/rag/: __init__.py
src/rag/api/: dependencies.py  main.py
src/rag/api/routers/: __init__.py  health.py  ingest.py  query.py
src/rag/chunking/: __init__.py  base.py  text_splitter.py
src/rag/config/: __init__.py  settings.py
src/rag/embedding/: __init__.py  base.py  openai_embedder.py
src/rag/evaluation/: __init__.py  base.py  metrics.py
src/rag/generator/: __init__.py  base.py  openai_generator.py
src/rag/ingestion/: __init__.py  base.py  file_loader.py  web_loader.py
src/rag/pipeline/: __init__.py  ingestion_pipeline.py  rag_pipeline.py
src/rag/prompts/: __init__.py  templates.py
src/rag/reranker/: __init__.py  base.py  cross_encoder.py
src/rag/retriever/: __init__.py  base.py  similarity_retriever.py
src/rag/schemas/: __init__.py  document.py  query.py  response.py
src/rag/utils/: __init__.py  helpers.py  logging.py
src/rag/vector_store/: __init__.py  base.py  chroma_store.py
tests/: conftest.py  test_api.py  test_chunking.py  test_config.py  test_embedding.py  test_generator.py  test_ingestion.py  test_pipeline.py  test_retriever.py
ui/: app.py
